# event-tag-classifier

./: Cargo.toml  README.md  dataset.json
src/: dataset.rs  main.rs  model.rs  preprocess.rs  vocabulary.rs
