[package]
name = "event-tag"
version = "0.1.0"
authors = ["Maddie Albu"]
edition = "2024"

[dependencies]
tokenizers = "0.14"                          
rand = "0.8"
safetensors = "0.2.8"                                               
burn = { version = "0.16.0", features = ["wgpu", "autodiff"] }
burn-core = "0.16.0"
burn-autodiff = "0.16"
burn-fusion = "0.16.0"
burn-tensor = "0.16"
burn-tch = "0.16.0"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.140"
